# ocvx

./: README.md  dune-project  ocvx.opam
lib/: dune
lib/common/: common.ml  common.mli  dune
lib/ocvx/: dune  ocvx.ml  ocvx.mli
lib/osqp/: api.ml  api.mli  bindings.ml  dune  functions.ml  osqp.ml  osqp.mli
lib/scs/: bindings.ml  dune  scs.ml  scs.mli
test/: dune  test_common.ml  test_osqp.ml  test_scs.ml
